# winc1500-updater

./: .gitignore  CMakeLists.txt  Makefile  README.org  arduino-libraries  endianess.cpp  main.cpp  upgrade.sh
